syntax = "proto3";

option go_package = "ulambda/hotel/proto";

service Geo {
  rpc Nearby(GeoRequest) returns (GeoResult);
}

message GeoRequest {
  float lat = 1;
  float lon = 2;
}

message GeoResult {
  repeated string hotelIds = 1;
}
