syntax = "proto3";

option go_package = "ulambda/hotel/proto";

service User {
  // Finds the hotels contained nearby the current lat/lon.
  rpc MakeReservation(UserRequest) returns (UserResult);
  rpc CheckAvailability(UserRequest) returns (UserResult);
}

// The latitude and longitude of the current location.
message UserRequest {
	string name = 1;
	string password = 2;
}

message UserResult {
  string oK = 1;
}
